fix: 버튼 클릭 안 되는 현상 - opacity는 화면에 가려져도 이벤트가 적용되기 때문에 제일 하단에 위치한 screen start에서 버튼 클릭이 안 되었던 것 - visibility로 이벤트 적용 못 하게 막음

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -37,11 +37,11 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0;
+  visibility: hidden;
 }
 
 .screen.active {
-  opacity: 1;
+  visibility: visible;
 }
 
 .directive {
